# aoc-in-c

./: .clang-format  .clang-tidy  .clangd  .gitignore  BUILD.md  CMakeLists.txt  Makefile  README.md  cbuild.ps1  cclean.ps1  compile_commands.json  cspell.json  ctest.ps1
include/: input.h  test_case.h
include/2015/: aoc_2015_day_01.h  aoc_2015_day_02.h  aoc_2015_day_03.h  day01.h
src/: input.c  input.h  main.c
src/2015/: aoc_2015_day_01.c  aoc_2015_day_02.c  aoc_2015_day_03..c  aoc_2015_day_03.c  day01.c
